@@ -85,6 +85,8 @@ div.title {
 <li class=menu><a href="$relpath$index.html">Main&nbsp;Page</a></li>
 <li class=menu><a href="$relpath$annotated.html">Classes</a></li>
 <li class=menu><a href="$relpath$install.html">Installation</a></li>
+<li class=menu><a href="$relpath$linux_tips.html">Linux Tips</a></li>
+<li class=menu><a href="$relpath$windows_tips.html">Windows Tips</a></li>
 </ul>
 </div>
 
@@ -103,8 +105,13 @@ div.title {
 <div class=title>Related&nbsp;Links</div>
 <ul class=menu>
 <li class=menu><a href="http://eris.liralab.it/yarp">YARP</a></li>
+<li class=menu><a href="http://www.makesweet.com/">MakeSweet</a></li>
 <li class=menu><a href="http://effectv.sourceforge.net/">EffecTV</a></li>
+<li class=menu><a href="http://www.allocinit.com/index.php?title=CamTwist">CamTwist</a></li>
 </ul>
+
+
+
 </div>
 
 <center>
