@@ -2,13 +2,31 @@
  * @page install Installing ucanvcam
  *
 
-Here are the hopelessly inadequate instructions for installing ucanvcam.
+You can download ucanvcam in compiled from from http://www.makesweet.com
+
+
+\htmlonly 
+
+<a href="http://www.makesweet.com/webcam/ucanvcam/"><img src="ucanvcam-for-linux.jpg"></a>
+
+<a href="http://www.makesweet.com/webcam/ucanvcam/"><img src="ucanvcam-for-windows.jpg"></a>
+
+\endhtmlonly
+
+
+Here are some rather inadequate instructions for 
+compiling and installing ucanvcam:
 
 \li Make sure you have CMake installed.
 \li Download ucanvcam
 \li Run "./configure"
 \li Run "make"
 \li ucanvcam should now be available in the "build" directory.
+
+Once installed, see OS-specific tips:
+
+\li \ref linux_tips
+\li \ref windows_tips
 
 \image html favicon.ico
 
